# fastapi

./: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/src/: main.py
backend/src/auth/certs/: jwt-private.pem  jwt-public.pem
backend/src/core/: config.py
backend/src/users/: schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/api/: index.js
frontend/src/contexts/: index.js
frontend/src/pages/: index.js
frontend/src/pages/signin/: index.js
src/: main.py
src/auth/: dependencies.py  router.py  utils.py
